duihome (0.21.10~1) unstable; urgency=low

  * Support for absolute icon paths in .desktop entry files
  * Implemented: SWP#DUI-2666 Verify the UI flow when exiting and re-entering homescreen views

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 07 Jun 2010 11:11:00 +0300

duihome (0.21.9-1) unstable; urgency=low

  * Implemented: SWP#DUI-2724 Support to open launcher at a page where launcher item with certain application icon is displayed.
  * Implemented: SWP#DUI-3019 Switcher overview mode should have no more than 4 thumbnails at one time.
  * Implemented: SWP#DUI-3205 Implement support for "-prestart" switch in duihome
  * Fixes: NB#169758 - Launcher button not updated when desktop entry file is modified
  * Fixes: NB#168077 - launcherbuttons.data keys that do not belong to [DesktopEntries] group result in broken entries in the launcher
  * Fixes: NB#168422 - System modal dialog windows are shown in the switcher
  * Fixes: NB#165454 - duihome must implement -prestart parameter

 -- Aki Koskinen <aki.koskinen@nokia.com>  Thu, 03 Jun 2010 16:23:00 +0300

duihome (0.21.8-1) unstable; urgency=low

  * Disabled the Applet Space 

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 10 May 2010 11:52:48 +0300

duihome (0.21.7-1) unstable; urgency=low

  * Implemented: SWP#DUI-2787 Name of the switcher thumbnail should change when window title is changed.

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Fri, 07 May 2010 16:55:33 +0300

duihome (0.21.6-2) unstable; urgency=low

  * Fixes: NB#166958 Home screen crashes when changing the desktop wallpaper

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Tue, 04 May 2010 14:59:54 +0300

duihome (0.21.5-1) unstable; urgency=low

  * Fixes: NB#160236 Red background and unreadable names and icons in Applet Library
  * Fixes: NB#166169 Taskswitcher background is white and application headers are not visible

 -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 03 May 2010 15:04:15 +0300
