@@ -5,6 +5,7 @@
 \subsection New
 - Support for absolute icon paths in .desktop entry files.
 - Home screen provides the corrent UI flow.
+- New switcher buttons are added after a slight delay to speed up application startup.
 
 \section v0219 0.21.9
 
