@@ -2,6 +2,7 @@ duihome (0.21.10~1) unstable; urgency=low
 
   * Support for absolute icon paths in .desktop entry files
   * Implemented: SWP#DUI-2666 Verify the UI flow when exiting and re-entering homescreen views
+  * Implemented: SWP#DUI-3013 Optimize switcher update when new windows are created, old ones are removed or windows update
 
  -- Vesa Halttunen <vesa.halttunen@nokia.com>  Mon, 07 Jun 2010 11:11:00 +0300
 
